# OpticalPhaseSegmentation

./: .gitignore  BROWSER_REFRESH_INSTRUCTIONS.md  LICENSE  README.md  pyproject.toml  requirements.txt  start_web.py
src/segment/: __init__.py  batch_backend.py  batch_processor.py  pipeline.py  web_interface.py
src/web/: batch.html  batch.js  index.html  script.js  style.css
